// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsRow Component Snapshots matches snapshot with various counts 1`] = `
<RCTView
  ref={null}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "flexDirection": "row",
      "gap": 10,
      "minWidth": 0,
      "paddingHorizontal": 12,
      "paddingVertical": 4,
    }
  }
>
  <RCTTouchableOpacity
    accessibilityLabel="Anlar 42. Tap to view"
    accessibilityRole="button"
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    activeOpacity={0.8}
    aria-label="Anlar 42. Tap to view"
    onPress={[MockFunction]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    ref={null}
    role="button"
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "gap": 6,
          "justifyContent": "center",
          "paddingVertical": 2,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          [
            {
              "color": "#F8FAFC",
              "fontSize": 28,
              "fontWeight": "800",
              "includeFontPadding": false,
              "letterSpacing": -0.56,
              "marginBottom": 0,
            },
            {
              "color": "#DFFF00",
            },
          ]
        }
        testID="RCTText"
      >
        42
      </RCTText>
      <RCTText
        ref={null}
        style={
          {
            "color": "#94A3B8",
            "fontSize": 16,
            "fontWeight": "700",
            "letterSpacing": 0.2,
            "marginLeft": 2,
          }
        }
        testID="RCTText"
      >
        Anlar
      </RCTText>
    </RCTView>
  </RCTTouchableOpacity>
  <RCTView
    ref={null}
    style={
      {
        "backgroundColor": "rgba(255, 255, 255, 0.08)",
        "height": 24,
        "marginHorizontal": 4,
        "width": 1,
      }
    }
  />
  <RCTView
    ref={null}
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "gap": 6,
          "justifyContent": "center",
          "paddingVertical": 2,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          [
            {
              "color": "#F8FAFC",
              "fontSize": 28,
              "fontWeight": "800",
              "includeFontPadding": false,
              "letterSpacing": -0.56,
              "marginBottom": 0,
            },
            {
              "color": "#A855F7",
            },
          ]
        }
        testID="RCTText"
      >
        12
      </RCTText>
      <RCTText
        ref={null}
        style={
          {
            "color": "#94A3B8",
            "fontSize": 16,
            "fontWeight": "700",
            "letterSpacing": 0.2,
            "marginLeft": 2,
          }
        }
        testID="RCTText"
      >
        Aktif
      </RCTText>
    </RCTView>
  </RCTView>
</RCTView>
`;

exports[`StatsRow Component Snapshots matches snapshot with zero values 1`] = `
<RCTView
  ref={null}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "flexDirection": "row",
      "gap": 10,
      "minWidth": 0,
      "paddingHorizontal": 12,
      "paddingVertical": 4,
    }
  }
>
  <RCTTouchableOpacity
    accessibilityLabel="Anlar 0. Tap to view"
    accessibilityRole="button"
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    activeOpacity={0.8}
    aria-label="Anlar 0. Tap to view"
    onPress={[MockFunction]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    ref={null}
    role="button"
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "gap": 6,
          "justifyContent": "center",
          "paddingVertical": 2,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          [
            {
              "color": "#F8FAFC",
              "fontSize": 28,
              "fontWeight": "800",
              "includeFontPadding": false,
              "letterSpacing": -0.56,
              "marginBottom": 0,
            },
            {
              "color": "#DFFF00",
            },
          ]
        }
        testID="RCTText"
      >
        0
      </RCTText>
      <RCTText
        ref={null}
        style={
          {
            "color": "#94A3B8",
            "fontSize": 16,
            "fontWeight": "700",
            "letterSpacing": 0.2,
            "marginLeft": 2,
          }
        }
        testID="RCTText"
      >
        Anlar
      </RCTText>
    </RCTView>
  </RCTTouchableOpacity>
  <RCTView
    ref={null}
    style={
      {
        "backgroundColor": "rgba(255, 255, 255, 0.08)",
        "height": 24,
        "marginHorizontal": 4,
        "width": 1,
      }
    }
  />
  <RCTView
    ref={null}
    style={
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <RCTView
      ref={null}
      style={
        {
          "alignItems": "baseline",
          "flexDirection": "row",
          "gap": 6,
          "justifyContent": "center",
          "paddingVertical": 2,
        }
      }
    >
      <RCTText
        ref={null}
        style={
          [
            {
              "color": "#F8FAFC",
              "fontSize": 28,
              "fontWeight": "800",
              "includeFontPadding": false,
              "letterSpacing": -0.56,
              "marginBottom": 0,
            },
            {
              "color": "#A855F7",
            },
          ]
        }
        testID="RCTText"
      >
        0
      </RCTText>
      <RCTText
        ref={null}
        style={
          {
            "color": "#94A3B8",
            "fontSize": 16,
            "fontWeight": "700",
            "letterSpacing": 0.2,
            "marginLeft": 2,
          }
        }
        testID="RCTText"
      >
        Aktif
      </RCTText>
    </RCTView>
  </RCTView>
</RCTView>
`;
